# game-search

./: .gitignore  LICENSE  Makefile  README.md  game-search.cabal  mcts.cabal  prod-planning.cabal  stack.yaml
app/: Main.hs  TalismanProbs.hs  TicTacToe.hs
civ-prod-planning/: prod-planning.cabal
civ-prod-planning/src/: City.hs  Rig.hs  Searches.hs
src/: City.hs  Expectimax.hs  Heads.hs  MCTS.hs  Rig.hs  Searches.hs  Talisman.hs  TicTacToe.hs  Types.hs  Umpire.hs
src/GameSearch/: Expectimax.hs  MCTS.hs  Types.hs  Umpire.hs
src/GameSearch/Games/: AxisAndAlliesCombat.hs  Heads.hs  Talisman.hs  TicTacToe.hs
test/: Spec.hs  TalismanTest.hs
