name:                game-search
version:             0.1.0.0
synopsis:            Various game-playing programs against a common interface
description:         Please see README.md
homepage:            https://github.com/axch/game-search#readme
license:             Apache
license-file:        LICENSE
author:              Alexey Radul
maintainer:          axch@mit.edu
copyright:           2017 Alexey Radul
category:            Game
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     GameSearch.Expectimax
                     , GameSearch.MCTS
                     , GameSearch.Types
                     , GameSearch.Games.AxisAndAlliesCombat
                     , GameSearch.Games.Heads
                     , GameSearch.Games.Talisman
                     , GameSearch.Games.TicTacToe
                     , GameSearch.Umpire
  build-depends:       base >= 4.7 && < 5
                     , containers
                     , lens
                     , mtl
                     , random-fu
                     , syb
                     , transformers
  ghc-options:         -O2 -fno-ignore-asserts -Wall
  default-language:    Haskell2010

executable tic-tac-toe
  hs-source-dirs:      app
  main-is:             TicTacToe.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -O2
  build-depends:       base
                     , game-search
  default-language:    Haskell2010

executable talisman-probs
  hs-source-dirs:      app
  main-is:             TalismanProbs.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -O2
  build-depends:       base
                     , containers
                     , game-search
                     , transformers
  default-language:    Haskell2010

test-suite game-search-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  other-modules:       TalismanTest
  build-depends:       base
                     , containers
                     , game-search
                     , HUnit
                     , mtl
                     , QuickCheck
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -O2
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/axch/game-search
